kube-infra/kustomize/test/grafana/envs/prod/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
  name: grafana
  namespace: observability
spec:
  rules:
    - host: grafana.ortelius.io
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - grafana.ortelius.io
      secretName: grafana-tls-cert
